[gd_scene load_steps=37 format=3 uid="uid://blitgrm72xbb4"]

[ext_resource type="Script" path="res://main.gd" id="1_5o5gc"]
[ext_resource type="FontFile" uid="uid://dohtogt5hwc3" path="res://graphics/MinimalPixel v2.ttf" id="1_5uec2"]
[ext_resource type="PackedScene" uid="uid://midq3rvrnxje" path="res://die.tscn" id="7_1g6xi"]
[ext_resource type="Texture2D" uid="uid://bedn8yf2aod15" path="res://graphics/Custom Border and Panels Menu All Part/Border All 10.png" id="7_6g6lf"]
[ext_resource type="Texture2D" uid="uid://cmf1c5jylny8h" path="res://graphics/table-tile.png" id="7_67ic4"]
[ext_resource type="Shader" path="res://mana.gdshader" id="8_80yi1"]
[ext_resource type="Texture2D" uid="uid://3ivmp8mriyoq" path="res://graphics/tumblr_pmexqzL8UA1s5y1z0o1_1280.png" id="8_yqrc3"]
[ext_resource type="Shader" path="res://slice.gdshader" id="10_b6ofl"]
[ext_resource type="Texture2D" uid="uid://c8vbbs0gcq17m" path="res://graphics/Custom Border and Panels Menu All Part/Border All 2.png" id="10_j3gdm"]
[ext_resource type="Texture2D" uid="uid://djgmgsbl8kon" path="res://graphics/Retro Pixel Ribbons, Banners and Frames 2/01.png" id="11_kgeu5"]
[ext_resource type="Texture2D" uid="uid://lj85p0hwjpua" path="res://graphics/table-patch.png" id="11_n4iyw"]
[ext_resource type="Texture2D" uid="uid://3xi8mybwn3fb" path="res://graphics/Pixel UI pack 3/02.png" id="11_y5wxy"]
[ext_resource type="Texture2D" uid="uid://c4ujknnkxgats" path="res://graphics/RPG_Icon_Set_x4.png" id="12_bjhyt"]
[ext_resource type="Texture2D" uid="uid://bn5lhgdbioowd" path="res://graphics/Pixel UI pack 3/00.png" id="13_4us1d"]

[sub_resource type="Theme" id="Theme_20tiw"]
default_font = ExtResource("1_5uec2")

[sub_resource type="AtlasTexture" id="AtlasTexture_uv7ko"]
atlas = ExtResource("11_kgeu5")
region = Rect2(257, 197, 62, 25)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_terb4"]
noise_type = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rjrsd"]
seamless = true
noise = SubResource("FastNoiseLite_terb4")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tk75v"]
noise_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_k7qko"]
seamless = true
noise = SubResource("FastNoiseLite_tk75v")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ha8w"]
shader = ExtResource("8_80yi1")
shader_parameter/current_mana = 1.0
shader_parameter/max_mana = 1.0
shader_parameter/rank_advance_mana = 1.0
shader_parameter/inset = 0.8
shader_parameter/groove_opacity = 0.5
shader_parameter/groove_speed = 0.1
shader_parameter/groove_width = 0.075
shader_parameter/groove_distance = 0.3
shader_parameter/border_color = Color(0.843137, 0.0941176, 0.211765, 0.670588)
shader_parameter/border_width = 0.1
shader_parameter/border_speed = 0.02
shader_parameter/noise = SubResource("NoiseTexture2D_k7qko")
shader_parameter/groovy_noise = SubResource("NoiseTexture2D_rjrsd")
shader_parameter/glow_strength = 0.5
shader_parameter/mana_color = Color(0.678431, 0, 0.0196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4orf"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmeco"]
bg_color = Color(1, 0.176471, 0.760784, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0coyw"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehwmg"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1igh"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dhnx6"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u73hw"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nxpe"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xw0sa"]
shader = ExtResource("10_b6ofl")
shader_parameter/direction = Vector2(0, 0.5)
shader_parameter/offset = 0.0
shader_parameter/fade = 0.7
shader_parameter/strip = 4.0

[sub_resource type="Animation" id="Animation_ncwtk"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic:material:shader_parameter/offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_lwv61"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic:material:shader_parameter/offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7hctx"]
_data = {
"RESET": SubResource("Animation_lwv61"),
"death": SubResource("Animation_ncwtk")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0gt8q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dfa1s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hle3f"]
atlas = ExtResource("12_bjhyt")
region = Rect2(8, 712, 48, 47)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_20tiw")
script = ExtResource("1_5o5gc")
metadata/_edit_horizontal_guides_ = [-133.0]
metadata/_edit_vertical_guides_ = [350.0, 16.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_67ic4")
stretch_mode = 1

[node name="PlayerUI" type="NinePatchRect" parent="."]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(320, 240)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -240.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_j3gdm")
region_rect = Rect2(320, 192, 64, 64)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI/MarginContainer"]
layout_mode = 2

[node name="PlayerDetails" type="VBoxContainer" parent="PlayerUI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="PlayerDice" type="VBoxContainer" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
texture = SubResource("AtlasTexture_uv7ko")
stretch_mode = 5

[node name="Label" type="Label" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -9.5
offset_right = 112.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dice"
horizontal_alignment = 1

[node name="Rings" type="GridContainer" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 4
columns = 5

[node name="ItemSlot" type="NinePatchRect" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/Rings"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("11_y5wxy")
region_rect = Rect2(4, 100, 24, 24)

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/Rings/ItemSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Die" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/Rings/ItemSlot/MarginContainer" instance=ExtResource("7_1g6xi")]
layout_mode = 2

[node name="ItemSlot2" type="NinePatchRect" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/Rings"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("11_y5wxy")
region_rect = Rect2(4, 100, 24, 24)

[node name="ItemSlot3" type="NinePatchRect" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/Rings"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("11_y5wxy")
region_rect = Rect2(4, 100, 24, 24)

[node name="ItemSlot4" type="NinePatchRect" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/Rings"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("11_y5wxy")
region_rect = Rect2(4, 100, 24, 24)

[node name="ItemSlot5" type="NinePatchRect" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerDice/Rings"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("11_y5wxy")
region_rect = Rect2(4, 100, 24, 24)

[node name="PlayerShield" type="VBoxContainer" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ShieldGraphic" type="ColorRect" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerShield"]
material = SubResource("ShaderMaterial_5ha8w")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MainShield" type="ProgressBar" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerShield"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_c4orf")
theme_override_styles/fill = SubResource("StyleBoxFlat_wmeco")
value = 42.0

[node name="Elementals" type="HBoxContainer" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerShield"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Flux" type="ProgressBar" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerShield/Elementals"]
custom_minimum_size = Vector2(15, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_0coyw")
theme_override_styles/fill = SubResource("StyleBoxFlat_ehwmg")
value = 33.0
fill_mode = 3
show_percentage = false

[node name="Gaia" type="ProgressBar" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerShield/Elementals"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_r1igh")
theme_override_styles/fill = SubResource("StyleBoxFlat_dhnx6")
value = 44.0
fill_mode = 3
show_percentage = false

[node name="Ether" type="ProgressBar" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerDetails/PlayerShield/Elementals"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_u73hw")
theme_override_styles/fill = SubResource("StyleBoxFlat_0nxpe")
value = 11.0
fill_mode = 3
show_percentage = false

[node name="PlayerSpellbook" type="ScrollContainer" parent="PlayerUI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="Spells" type="HBoxContainer" parent="PlayerUI/MarginContainer/HBoxContainer/PlayerSpellbook"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="EventUI" type="NinePatchRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(320, 240)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0395833
anchor_right = 1.0
anchor_bottom = 0.352344
offset_bottom = -0.200012
grow_horizontal = 2
texture = ExtResource("7_6g6lf")
region_rect = Rect2(257, 321, 62, 62)
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="EventUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Monster" type="HBoxContainer" parent="EventUI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="GraphicHolder" type="Control" parent="EventUI/MarginContainer/Monster"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Graphic" type="TextureRect" parent="EventUI/MarginContainer/Monster/GraphicHolder"]
texture_filter = 1
material = SubResource("ShaderMaterial_xw0sa")
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
expand_mode = 3

[node name="MonsterAnimation" type="AnimationPlayer" parent="EventUI/MarginContainer/Monster/GraphicHolder"]
libraries = {
"": SubResource("AnimationLibrary_7hctx")
}

[node name="MonsterDetails" type="VBoxContainer" parent="EventUI/MarginContainer/Monster"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 8
alignment = 1

[node name="Ribbon" type="TextureRect" parent="EventUI/MarginContainer/Monster/MonsterDetails"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
size_flags_vertical = 0
texture = SubResource("AtlasTexture_uv7ko")
stretch_mode = 5

[node name="MonsterName" type="Label" parent="EventUI/MarginContainer/Monster/MonsterDetails/Ribbon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -9.5
offset_right = 13.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Cat"
horizontal_alignment = 1

[node name="Health" type="ProgressBar" parent="EventUI/MarginContainer/Monster/MonsterDetails"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 42.0
show_percentage = false

[node name="MonsterDiceTray" type="FlowContainer" parent="EventUI/MarginContainer/Monster"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
alignment = 1

[node name="DiceUI" type="NinePatchRect" parent="."]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(320, 160)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.6
offset_top = 14.256
offset_bottom = 69.2
grow_horizontal = 2
grow_vertical = 2
region_rect = Rect2(0, 0, 32, 32)
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="DiceCup" type="TextureRect" parent="DiceUI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -73.0
offset_right = 50.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_yqrc3")
expand_mode = 4

[node name="DiceTray" type="HFlowContainer" parent="DiceUI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 16
alignment = 1

[node name="RollText" type="Label" parent="DiceUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.459
anchor_top = 0.021121
anchor_right = 0.542
anchor_bottom = 0.183121
offset_left = -0.200012
offset_top = 2.0
offset_right = 0.399963
offset_bottom = 2.07999
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/line_spacing = 0
text = "Roll 1/3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RollButton" type="MarginContainer" parent="DiceUI"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.029
anchor_right = 0.5
anchor_bottom = 1.029
offset_left = -125.0
offset_top = -29.08
offset_right = 125.0
offset_bottom = 28.92
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="NinePatchRect" type="NinePatchRect" parent="DiceUI/RollButton"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("13_4us1d")
region_rect = Rect2(64, 85, 48, 22)
patch_margin_left = 6
patch_margin_top = 7
patch_margin_right = 6
patch_margin_bottom = 7

[node name="Button" type="Button" parent="DiceUI/RollButton/NinePatchRect"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_0gt8q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dfa1s")
disabled = true
text = "ROLL"

[node name="SpellOptions" type="ColorRect" parent="DiceUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0196078, 0.0196078, 0.784314)

[node name="Title" type="Label" parent="DiceUI/SpellOptions"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.017
anchor_right = 1.0
anchor_bottom = 0.017
offset_top = -1.06
offset_bottom = 24.94
grow_horizontal = 2
text = "Choose a dice combination to use"
horizontal_alignment = 1

[node name="Combos" type="VBoxContainer" parent="DiceUI/SpellOptions"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.172
anchor_right = 1.0
anchor_bottom = 0.944
offset_top = 0.0399971
offset_bottom = 0.0799713
grow_horizontal = 2
theme_override_constants/separation = 4
alignment = 1

[node name="StatusBar" type="NinePatchRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.995
anchor_bottom = 0.05
offset_right = 3.99994
offset_bottom = -30.0
grow_horizontal = 2
texture = ExtResource("11_n4iyw")
region_rect = Rect2(-1, -1, 66, 66)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="StatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="StatusBar/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_hle3f")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="StatusBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 16
text = "21485"
vertical_alignment = 1

[connection signal="pressed" from="DiceUI/RollButton/NinePatchRect/Button" to="." method="_on_roll_button_pressed"]
